--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar--wrapper{
-    width: 550px;
+    width: auto;
     height: 70px;
     background-color: #fff;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
